--- a/package.json
+++ b/package.json
@@ -13,19 +13,21 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/faker": "^5.1.2",
     "@types/jest": "^26.0.14",
     "@types/node": "^14.11.3",
-    "@typescript-eslint/eslint-plugin": "^4.4.0",
-    "eslint": "^7.10.0",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "eslint": "^6.8.0",
     "eslint-config-standard-with-typescript": "^11.0.1",
-    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "git-commit-msg-linter": "^3.0.0",
+    "faker": "^5.1.0",
+    "git-commit-msg-linter": "^2.4.2",
     "husky": "^4.3.0",
     "jest": "^26.5.0",
-    "lint-staged": "^10.4.0",
+    "lint-staged": "^10.2.2",
     "ts-jest": "^26.4.1",
     "typescript": "^4.0.3"
   }
