--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.21.3",
     "eslint-plugin-standard": "^4.0.1",
     "faker": "^5.1.0",
     "git-commit-msg-linter": "^2.4.2",
